# Soozee

./: LICENSE  README.md  soozee.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs
src/Soozee/Plugin/: Korea.hs
