name:                soozee
version:             0.1.0.0
synopsis:            Lambdabot variant for Espernet KSP channels
description:         Please see README.md
homepage:            http://github.com/Majiir/Soozee#readme
license:             BSD3
license-file:        LICENSE
author:              Majiir
maintainer:          majiir@nabaal.net
copyright:           2016 Majiir
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib,
                       Soozee.Plugin.Korea
  build-depends:       base >= 4.7 && < 5,
                       HTTP >= 4000.2.22 && < 4000.3,
                       lambdabot-core >= 5.0.3 && < 5.1,
                       lambdabot-haskell-plugins >= 5.0.3 && < 5.1,
                       lambdabot-irc-plugins >= 5.0.3 && < 5.1,
                       lambdabot-novelty-plugins >= 5.0.3 && < 5.1,
                       lambdabot-social-plugins >= 5.0.1 && < 5.1,
                       lambdabot-misc-plugins >= 5.0.1 && < 5.1,
                       lambdabot-reference-plugins >= 5.0.3 && < 5.1,
                       mtl >= 2
  default-language:    Haskell2010

executable soozee-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , soozee
  default-language:    Haskell2010

test-suite soozee-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , soozee
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Majiir/Soozee
